# iosbuildbot

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  config.ini
.github/workflows/: build.yml  buildandpublish.yml
iosbuildbot/: CMakeLists.txt  ConfigFile.h  ConfigFile.m  Git.h  Git.m  main.m  main.mm  utils.h  utils.m  utils.mm
iosbuildbot-core/: BuildBot.h  BuildBot.m  CMakeLists.txt  ConfigFile.h  ConfigFile.m  Git.h  Git.m  ShellCommandRunner.h  ShellCommandRunner.m  utils.h  utils.m
iosbuildbot-tests/: CMakeLists.txt  config_file_tests.m  git_tests.m
iosbuildbot.xcodeproj/: project.pbxproj
iosbuildbot.xcodeproj/xcshareddata/xcschemes/: iosbuildbot-tests.xcscheme  iosbuildbot.xcscheme
iosbuildbot.xcodeproj/xcuserdata/bram.xcuserdatad/xcschemes/: xcschememanagement.plist
